# rag-exercise

./: main.py  pyproject.toml
cookbookrag/: .env  config.py  index_construction.py  main.py
cookbookrag/rag_modules/: data_preparation.py  generation_integration.py  retrieval_optimization.py
cookbookrag/vector_index/: index.faiss  index.pkl
learn-claude-code/: .env  agent_loop.py
