[project]
name = "for-what"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.6",
    "datasets==3.6.0",
    "datasketch==1.6.4",
    "dotenv>=0.9.9",
    "einops==0.8.1",
    "flask==3.0.3",
    "flask-cors==4.0.0",
    "jieba==0.42.1",
    "jinja2==3.1.2",
    "jsonlines==4.0.0",
    "marshmallow==3.22.0",
    "matplotlib==3.10.0",
    "modelscope>=1.35.0",
    "ngrok==1.4.0",
    "nltk==3.8",
    "numpy==1.26.4",
    "nvidia-ml-py>=13.590.48",
    "openai==1.59.6",
    "peft==0.7.1",
    "psutil==5.9.8",
    "pydantic==2.11.5",
    "rich==13.7.1",
    "scikit-learn==1.5.1",
    "sentence-transformers==2.3.1",
    "simhash==2.1.2",
    "streamlit==1.50.0",
    "swanlab==0.6.8",
    "tiktoken==0.10.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.57.1",
    "trl==0.13.0",
    "ujson>=5.4.0",
    "wandb==0.18.3",
    "langchain==0.3.26",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
fixable = [
    "ALL",
]
